--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,15 @@
 <resources>
 
     <string name="app_name">LeekLife</string>
-    <string name="version_name">1.0.010</string>
+    <string name="version_name">1.0.014</string>
     <string name="imagedescription"></string>
     <string name="upgrade_tip">桌面程序即将升级,请耐心等待几秒</string>
+    <string name="progress_msg">준비중…, &#8230;</string>
+	<string name="downloading_msg">다운로드중&#8230;</string>
+    <string name="download_please_waiting">잠시만 기다려 주세요.</string>
+	<string name="download_complete_msg">다운로드 완료하였습니다.</string>
+	<string name="download_error_msg">다운로드가 실패하였습니다.</string>
+	<string name="apk_download_err_msg">APK파일 다운로드에 실패했습니다.\n잠시후 다시 한번 시험하여주세요.</string>
+	<string name="install_error_msg">APP설치에 실패했습니다.</string>
 
 </resources>
