--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">LeekLife</string>
     <string name="version_name">1.0.014</string>
     <string name="imagedescription"></string>
-    <string name="upgrade_tip">桌面程序即将升级,请耐心等待几秒</string>
+    <string name="upgrade_tip">바탕화면업그레이드중입니다 잠시만기다려주세요.</string>
     <string name="progress_msg">준비중…, &#8230;</string>
 	<string name="downloading_msg">다운로드중&#8230;</string>
     <string name="download_please_waiting">잠시만 기다려 주세요.</string>
